# slack-openrouter-agent

./: .env.example  README.md  pyproject.toml  run_fastapi.py  run_flask.py
app/: openrouter_client.py
fastapi_app/: main.py  slack_events.py
flask_app/: main.py
